tests/Semantic/AsError/wip-interface-semanticerror-lack-member2.azsl
interface my_name
{
    associatedtype T;
};

class s : my_name
{
};
// error: my_name/T not reimplemented